Closed
Bug 665812
Opened 14 years ago
Closed 14 years ago
TI: "Assertion failure: [infer failure] Missing type pushed 0: int,"
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: gkw, Unassigned)
References
Details
(Keywords: assertion, regression, testcase)
(function() {
function::d = 0
d.(l)
function d() {}
})()
asserts js debug shell on JM changeset 9ff00d53b5a5 with -m, -a and -n at Assertion failure: [infer failure] Missing type pushed 0: int,
autoBisect shows this is probably related to the following changeset:
The first bad revision is:
changeset: 68276:90a7b141e0cf
user: Brian Hackett
date: Fri Apr 22 07:59:45 2011 -0700
summary: [INFER] Bytecode SSA analysis, bug 650715.
Comment 1•14 years ago
|
||
It looks like that 'function::d' can be used to bind and update local variables of the current script (don't know the reason for this or what this syntax actually means). Fix watches for this and disables SSA for local names which might alias one of these QNAME opcodes, as is already done for NAME opcodes.
http://hg.mozilla.org/projects/jaegermonkey/rev/ff54e5c320ba
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Comment 2•13 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/e4x/bug665812.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•