[INFER] Watch for non-closed local names aliased by XML QNAME opcodes, bug 665812.